--- a/styles/abstracts/_fontsize.scss
+++ b/styles/abstracts/_fontsize.scss
@@ -1,22 +1,52 @@
 
 h1 {
     font-size: 4rem;
+    @media (max-width: 1200px) {
+        font-size: 3.5rem;
+    }
+    @media (max-width: 900px) {
+        font-size: 3rem;
+    }
 }
 
 h2 {
     font-size: 3.5rem;
+    @media (max-width: 1200px) {
+        font-size: 3rem;
+    }
+    @media (max-width: 900px) {
+        font-size: 2.5rem;
+    }
 }
 
 h3 {
     font-size: 3rem;
+    @media (max-width: 1200px) {
+        font-size: 2.5rem;
+    }
+    @media (max-width: 900px) {
+        font-size: 2rem;
+    }
 }
 
 h4 {
     font-size: 2rem;
+    @media (max-width: 1200px) {
+        font-size: 1.5rem;
+    }
+    @media (max-width: 900px) {
+        font-size: 1.2rem;
+    }
 }
 
 p {
     font-size: 2rem;
+    @media (max-width: 1200px) {
+        font-size: 1.5rem;
+    }
+    @media (max-width: 900px) {
+        font-size: 1.2rem;
+    }
 }
 label {
     font-size: 2rem;
