--- a/styles/components/_timeline.scss
+++ b/styles/components/_timeline.scss
@@ -4,10 +4,11 @@ top: 0;
 left: 0;
 width: 100%;
 // background: var(--navBgColor);
-background-color: black;
-color: var(--navTextColor);
+background-color: white;
+// color: var(--navTextColor);
 // z-index: 2;
 height: 4rem;
+z-index: 99;
 }
 nav::after {
 content: "";
@@ -69,13 +70,13 @@ padding: 0;
 position: relative;
 display: block;
 min-width: 8rem;
-padding: 2.25rem 1rem 0.5rem;
+padding: 1.25rem 1rem 0.5rem;
 text-align: center;
 color: inherit;
 text-decoration: none;
 z-index: 1;
 transition: color 150ms;
-    // Selectionner le numéro 2
+font-size: 0.8rem;
 }
 .nav__link:hover, .nav__link:focus {
 color: var(--activeColor);
@@ -99,7 +100,8 @@ transition: transform 200ms;
 }
 .nav__link.is-active span {
 transform: scale(1.4);
-color: var(--activeColor);
+// color: var(--activeColor);
+color: rgba(0, 0, 0, 0.515);
 }
 .nav__link.is-active::after {
 display: none;
