--- a/styles/layouts/_scrollbar.scss
+++ b/styles/layouts/_scrollbar.scss
@@ -1,9 +1,9 @@
-// ::-webkit-scrollbar {
-//     background-color: $white;
-//     width: 5px;
-// }
+::-webkit-scrollbar {
+    background-color: $white;
+    width: 5px;
+}
 
-// ::-webkit-scrollbar-thumb {
-//     background-color: $black;
-//     height: auto;
-// }
+::-webkit-scrollbar-thumb {
+    background-color: $black;
+    height: auto;
+}
