--- a/styles/abstracts/_colors.scss
+++ b/styles/abstracts/_colors.scss
@@ -1,14 +1,6 @@
 
 $white: #fff;
+$lightBlack: #303030;
 $black: #000;
 $grey: #f2f2f2;
-
-.blackTheme{
-    // background-color: $black;
-    // color: $white;
-}
-
-.whiteTheme{
-    // background-color: $white;
-    // color: $black;
-}
+$red : #E20613;
