--- a/styles/abstracts/_fontfamily.scss
+++ b/styles/abstracts/_fontfamily.scss
@@ -1,52 +1,33 @@
-// @font-face {
-//     font-family: '';
-//     src: url('../../public/assets/font/gallery-modern.woff2') format('woff2');
-//     font-display: swap;
-// }
+@font-face {
+    font-family: 'panorama';
+    src: url('../../public/assets/font/panorama-black.woff2') format('woff2');
+    font-display: swap;
+    font-weight: 900;
+}
 
-// // Origin Font
+@font-face {
+    font-family: 'panorama';
+    src: url('../../public/assets/font/panorama-light.woff2') format('woff2');
+    font-display: swap;
+    font-weight: 300;
+}
 
-// @font-face {
-//     font-family: 'styrenea-light';
-//     src: url('../../public/assets/font/styrenea-light.woff2') format('woff2');
-//     font-display: swap;
-// }
+@font-face {
+    font-family: 'roboto';
+    src: url('../../public/assets/font/roboto-regular.woff2') format('woff2');
+    font-display: swap;
+    font-weight: normal;
+}
 
-// @font-face {
-//     font-family: 'styrenea-regular';
-//     src: url('../../public/assets/font/styrenea/styrenea-regular.woff2') format('woff2');
-//     font-display: swap;
-// }
+@font-face {
+    font-family: 'roboto';
+    src: url('../../public/assets/font/roboto-bold.woff2') format('woff2');
+    font-display: swap;
+    font-weight: bold;
+}
 
-// @font-face {
-//     font-family: 'styrenea-medium';
-//     src: url('../../public/assets/font/styrenea/styrenea-medium.woff2') format('woff2');
-//     font-display: swap;
-// }
-
-
-// @font-face {
-//     font-family: 'styrenea-bold';
-//     src: url('../../public/assets/font/styrenea/styrenea-bold.woff2') format('woff2');
-//     font-display: swap;
-// }
-
-// @font-face {
-//     font-family: 'styrenea-black';
-//     src: url('../../public/assets/font/styrenea/styrenea-black.woff2') format('woff2');
-//     font-display: swap;
-// }
-
-// // FONTS VARIABLES
-
-// $gallery: 'gallery';
-// $styrenea-light: 'styrenea-light';
-// $styrenea-thin: 'styrenea-thin';
-// $styrenea-regular: 'styrenea-regular';
-// $styrenea-medium: 'styrenea-medium';
-// $styrenea-bold: 'styrenea-bold';
-// $styrenea-black: 'styrenea-black';
-
+$panorama: 'panorama';
+$roboto: 'roboto';
 
 
 
