--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -18,6 +18,14 @@
         align-items: center;
         flex-direction: column;
         padding: 5rem;
+        font-family: $panorama;
+        img {
+            display: block;
+            width: auto;
+            height: 100%;
+            max-width: 100%;
+            object-fit: cover;
+        }
         @media (max-width: 1200px) {
             padding: 2.5rem 2.5rem 0rem;
             width: 100%;
@@ -42,7 +50,11 @@
             color: $lightBlack;
             .submit {
                 height: 3rem;
-                background-color: black;
+                background-color: $lightBlack;
+                // transition: 0.3s ease-in-out;
+                // &:hover {
+                //     background-color: $red;
+                // }
             }
         }
     }
