--- a/styles/abstracts/_fontsize.scss
+++ b/styles/abstracts/_fontsize.scss
@@ -1,6 +1,7 @@
 
 h1 {
     font-size: 4rem;
+    letter-spacing: 1px;
     @media (max-width: 1200px) {
         font-size: 3.5rem;
     }
@@ -11,6 +12,7 @@ h1 {
 
 h2 {
     font-size: 3.5rem;
+    letter-spacing: 1px;
     @media (max-width: 1200px) {
         font-size: 3rem;
     }
@@ -21,6 +23,7 @@ h2 {
 
 h3 {
     font-size: 3rem;
+    letter-spacing: 1px;
     @media (max-width: 1200px) {
         font-size: 2.5rem;
     }
@@ -31,6 +34,7 @@ h3 {
 
 h4 {
     font-size: 2rem;
+    letter-spacing: 1px;
     @media (max-width: 1200px) {
         font-size: 1.5rem;
     }
@@ -41,6 +45,7 @@ h4 {
 
 p {
     font-size: 2rem;
+    letter-spacing: 1px;
     @media (max-width: 1200px) {
         font-size: 1.5rem;
     }
@@ -50,6 +55,10 @@ p {
 }
 label {
     font-size: 2rem;
+}
+
+span {
+    letter-spacing: 1px;
 }
 
 // A tester
