--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -22,7 +22,7 @@
         img {
             display: block;
             width: auto;
-            height: 100%;
+            height: auto;
             max-width: 100%;
             object-fit: cover;
         }
