--- a/styles/pages/_homepage.scss
+++ b/styles/pages/_homepage.scss
@@ -52,9 +52,11 @@ section {
     align-self: end;
     position: relative;
     z-index: 1;
+    opacity: 0;
     }
     .first {
         color: $red;
+        text-transform: uppercase;
     }
 
     .second {
@@ -73,10 +75,22 @@ section {
     
     .section__image {
         grid-row: 1;
-        grid-column: 5/span 3;
+        grid-column: 6/span 3;
         position: relative;
         align-self: center;
-       margin: auto;
+        margin: auto;
+        @media screen and (max-width: 768px) {
+            margin: 3rem auto;
+        }
+        // img {
+        //     &:nth-child(1) {
+        //         @media screen and (max-width: 425px) {
+        //             position: absolute;
+        //             top: -17vh;
+        //             left: -17vw;
+        //         }
+        //     }
+        // }
     // box-shadow: 0.45rem 0.45rem 8rem rgba(0, 0, 0, 0.3);
     }
     .section__image::after {
@@ -91,7 +105,30 @@ section {
     // z-index: 999;
     }
     .section__image img {
-    // filter: brightness(0.5) grayscale(100%);
-    max-height: 300px;
-    width: auto;
+        max-height: 300px;
+        width: auto;
+    }
+
+
+    .alone__circle {
+        position: absolute;
+        width: 150px;
+        right: 6rem;
+        top: -13rem;
+        opacity: 0;
+        animation: fade 1s ease-in-out both;
+        @keyframes fade {
+            0% {
+                opacity: 0;
+                transform: translateX(200%);
+            }
+            100% {
+                opacity: 1;
+                transform: translateX(0%);
+            }
+        }
+        @media screen and (max-width: 768px) {
+            right: 2rem;
+            top: -8rem;
+        }
     }
